--- a/scss/bootstrap.css
+++ b/scss/bootstrap.css
@@ -11532,9 +11532,19 @@ a.text-pink:hover, a.text-pink:focus {
 }
 
 .elemento-vetorial {
-  background-image: url("../img/paths/path1.png"), url("../img/paths/path4.png");
-  background-position: left top, right top;
+  background-image: url("../img/paths/path4.png");
+  background-position: top right -50%;
   background-repeat: no-repeat;
+  position: relative;
+}
+
+.elemento-vetorial::before {
+  content: url(../img//paths/path2.png);
+  position: absolute;
+  top: -235px;
+  -webkit-transform: scaleY(1) scaleX(-1) rotateZ(-90deg);
+          transform: scaleY(1) scaleX(-1) rotateZ(-90deg);
+  left: -15rem;
 }
 
 .florenscer {
@@ -11553,8 +11563,8 @@ a.text-pink:hover, a.text-pink:focus {
       -ms-flex-align: center;
           align-items: center;
   background-color: #736696;
-  padding: 25px 20px;
-  height: 35px;
+  padding: 15px 15px;
+  max-height: auto;
   border: none;
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -11821,5 +11831,206 @@ a.text-pink:hover, a.text-pink:focus {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 6px;
+}
+
+.form-cta {
+  position: relative;
+}
+
+.form-cta::after {
+  content: " ";
+  width: 1.3rem;
+  border-bottom: 1px solid #4A4A4A;
+  position: absolute;
+  bottom: -1rem;
+  right: 0;
+}
+
+@media (min-width: 576px) {
+  .subtitulo {
+    font-size: 1rem;
+  }
+  .display-2 {
+    font-size: 3.5rem;
+    line-height: 2.5rem;
+  }
+  .objetivos-bg-figure {
+    display: none;
+  }
+  .centralizar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .lifelong-texto p {
+    font-size: 1rem;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-bottom: 0px;
+  }
+  .navbar {
+    margin: 0 auto;
+    margin-bottom: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0;
+    padding-top: 5px;
+  }
+  .subtitulo {
+    font-size: 1.9rem;
+  }
+  .elemento-vetorial {
+    background-size: 50%;
+    background-position: top right -60%;
+  }
+  .elemento-vetorial::before {
+    top: -12.8rem;
+    left: -36%;
+    -webkit-transform: scaleY(0.5) scaleX(-0.5) rotateZ(-90deg);
+            transform: scaleY(0.5) scaleX(-0.5) rotateZ(-90deg);
+  }
+  .elemento-vetorial::before {
+    content: " ";
+  }
+}
+
+@media (max-width: 768px) {
+  .nome-deh {
+    font-size: 3rem;
+  }
+  .objetivos-bg-figure {
+    display: none;
+  }
+  .centralizar-tablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .center-vamos {
+    margin: 0 auto;
+    text-align: center;
+  }
+  a #sumir-email {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 425px) {
+  .lifelong-texto p {
+    font-size: 1rem;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-bottom: 0px;
+  }
+  a #sumir-email {
+    font-size: 0.8rem;
+  }
+  .nome-deh {
+    font-size: 3.5rem;
+    line-height: 3rem;
+  }
+  .objetivos-bg-figure {
+    display: none;
+  }
+  .subtitulo {
+    font-size: 1.5rem;
+  }
+  .elemento-vetorial {
+    display: none;
+  }
+  .lll {
+    font-size: 3rem;
+    line-height: 2rem;
+  }
+}
+
+@media (max-width: 375px) {
+  .lifelong-texto p {
+    font-size: 1rem;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-bottom: 0px;
+  }
+  a #sumir-email {
+    font-size: 0.8rem;
+  }
+  .nome-deh {
+    font-size: 3.5rem;
+    line-height: 3rem;
+  }
+  .objetivos-bg-figure {
+    display: none;
+  }
+  .subtitulo {
+    font-size: 1.5rem;
+  }
+  .elemento-vetorial {
+    display: none;
+  }
+  .lll {
+    font-size: 3rem;
+    line-height: 2rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .lifelong-texto p {
+    max-width: 100%;
+  }
+  a #sumir-email {
+    font-size: 0.8rem;
+  }
+  .nome-deh {
+    font-size: 3.5rem;
+    line-height: 3rem;
+  }
+  .objetivos-bg-figure {
+    display: none;
+  }
+  .subtitulo {
+    font-size: 1.5rem;
+  }
+  .elemento-vetorial {
+    display: none;
+  }
+  .lll {
+    font-size: 3rem;
+    line-height: 2rem;
+  }
 }
 /*# sourceMappingURL=bootstrap.css.map */
